# ECR

./: CMakeLists.txt  README.md
calibration/: .clang-format  CMakeLists.txt
calibration/include/calibration/: calibration_io.h  camera_calibrator.h  chessboard_detector.h
calibration/src/: calibration_io.cpp  camera_calibrator.cpp  chessboard_detector.cpp
calibration/tools/: calibrate_camera.cpp  verify_calibration.cpp
